Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-616

Wrong default path for remap plugins (and possibly TSAPI plugins?)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 2.1.5
    • Plugins
    • None

    Description

      When building ATS with a configure option like

      ./configure --prefix=/opt/ats

      the binary still gets compiled with a search path for remap plugins to look for plugins in /usr/local/libexec/trafficserver . I've verified this problem for remap plugins, not sure if it affects TSAPI plugins as well (should be examined).

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: