TS-616 Support normal default path for remap plugins

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1054821 13f79535-47bb-0310-9956-ffa450edef68